--- a/app/src/main/res/layout/new_member.xml
+++ b/app/src/main/res/layout/new_member.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorWhite"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,5 +16,161 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="30dp"
+        android:text="아이디"
+        android:textSize="18dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/ID"
+        app:layout_constraintTop_toBottomOf="@id/tv" />
+
+    <EditText
+        android:id="@+id/ID"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/edittext_border"
+        android:ems="12"
+        app:layout_constraintLeft_toRightOf="@id/tvID"
+        app:layout_constraintTop_toBottomOf="@+id/tv" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="19dp"
+        android:layout_marginRight="5dp"
+        android:text="중복확인"
+        app:layout_constraintLeft_toRightOf="@id/ID"
+        app:layout_constraintTop_toBottomOf="@id/tv" />
+
+
+    <TextView
+        android:id="@+id/tvPW"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginRight="10dp"
+        android:text="비밀번호"
+        android:textSize="18dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/ID"
+        app:layout_constraintTop_toBottomOf="@id/tvID" />
+
+    <EditText
+        android:id="@+id/PW"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/edittext_border"
+        android:ems="15"
+        android:inputType="textPassword"
+        app:layout_constraintLeft_toRightOf="@id/tvID"
+        app:layout_constraintTop_toBottomOf="@+id/ID" />
+
+    <TextView
+        android:id="@+id/tvName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="38dp"
+        android:layout_marginRight="10dp"
+        android:text="이름"
+        android:textSize="18dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/ID"
+        app:layout_constraintTop_toBottomOf="@id/tvPW" />
+
+    <EditText
+        android:id="@+id/Name"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/edittext_border"
+        android:ems="15"
+        android:inputType="textPassword"
+        app:layout_constraintLeft_toRightOf="@id/tvID"
+        app:layout_constraintTop_toBottomOf="@+id/PW" />
+
+    <TextView
+        android:id="@+id/tvPhone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="10dp"
+        android:text="휴대폰"
+        android:textSize="18dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/ID"
+        app:layout_constraintTop_toBottomOf="@id/tvName" />
+
+    <EditText
+        android:id="@+id/Phone"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/edittext_border"
+        android:ems="15"
+        android:inputType="textPassword"
+        app:layout_constraintLeft_toRightOf="@id/tvID"
+        app:layout_constraintTop_toBottomOf="@+id/Name" />
+
+    <TextView
+        android:id="@+id/tvMail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="10dp"
+        android:text="이메일"
+        android:textSize="18dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/ID"
+        app:layout_constraintTop_toBottomOf="@id/tvPhone" />
+
+    <EditText
+        android:id="@+id/Email"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/edittext_border"
+        android:ems="10"
+        android:inputType="textPassword"
+        app:layout_constraintLeft_toRightOf="@id/tvID"
+        app:layout_constraintTop_toBottomOf="@+id/Phone"/>
+
+    <Spinner
+        android:id="@+id/domain"
+        android:entries="@array/도메인"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/edittext_border"
+        android:inputType="textPassword"
+        app:layout_constraintLeft_toRightOf="@id/Email"
+        app:layout_constraintTop_toBottomOf="@+id/Phone"/>
+
+    <Button
+        app:layout_constraintTop_toBottomOf="@id/Email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="회원가입"
+        android:enabled="false"
+        android:layout_marginTop="20dp"/>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
