--- a/app/src/main/res/layout/find_id.xml
+++ b/app/src/main/res/layout/find_id.xml
@@ -4,6 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageButton
+        android:id="@+id/buttonBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="#00000000"
+        android:src="@drawable/baseline_keyboard_arrow_left_black_18dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
