--- a/app/src/main/res/layout/new_member.xml
+++ b/app/src/main/res/layout/new_member.xml
@@ -6,6 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <ImageButton
+        android:id="@+id/buttonBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="10dp"
+        android:background="#00000000"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:src="@drawable/baseline_keyboard_arrow_left_black_18dp" />
+
     <TextView
         android:id="@+id/tv"
         android:layout_width="wrap_content"
@@ -26,7 +38,6 @@
         android:text="아이디"
         android:textSize="18dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/ID"
         app:layout_constraintTop_toBottomOf="@id/tv" />
 
     <EditText
@@ -36,17 +47,19 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="25dp"
         android:background="@drawable/edittext_border"
-        android:ems="12"
+        android:ems="10"
         app:layout_constraintLeft_toRightOf="@id/tvID"
         app:layout_constraintTop_toBottomOf="@+id/tv" />
 
     <Button
+        android:id="@+id/checkId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="19dp"
         android:layout_marginRight="5dp"
         android:text="중복확인"
         app:layout_constraintLeft_toRightOf="@id/ID"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv" />
 
 
@@ -70,7 +83,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="25dp"
         android:background="@drawable/edittext_border"
-        android:ems="15"
+        android:ems="13"
         android:inputType="textPassword"
         app:layout_constraintLeft_toRightOf="@id/tvID"
         app:layout_constraintTop_toBottomOf="@+id/ID" />
@@ -95,7 +108,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="25dp"
         android:background="@drawable/edittext_border"
-        android:ems="15"
+        android:ems="13"
         android:inputType="textPassword"
         app:layout_constraintLeft_toRightOf="@id/tvID"
         app:layout_constraintTop_toBottomOf="@+id/PW" />
@@ -120,7 +133,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="25dp"
         android:background="@drawable/edittext_border"
-        android:ems="15"
+        android:ems="13"
         android:inputType="textPassword"
         app:layout_constraintLeft_toRightOf="@id/tvID"
         app:layout_constraintTop_toBottomOf="@+id/Name" />
@@ -145,14 +158,14 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="25dp"
         android:background="@drawable/edittext_border"
-        android:ems="10"
+        android:ems="9"
         android:inputType="textPassword"
         app:layout_constraintLeft_toRightOf="@id/tvID"
         app:layout_constraintTop_toBottomOf="@+id/Phone"/>
 
     <Spinner
         android:id="@+id/domain"
-        android:entries="@array/도메인"
+        android:entries="@array/domain"
         android:layout_width="wrap_content"
         android:layout_height="38dp"
         android:layout_marginLeft="15dp"
